tests/dataset/tpc-ds/compiler/ex/q57.error
warning: variable "i" is unused (if the variable is not meant to be used, prefix it with an underscore)
    │
 45 │                %{items: date_dim, on: fn cs, i, d -> cs.date == d.d_date_sk end},
    │                                              ~
    │
    └─ /tmp/q57.exs:45:46: Main.main/0

    warning: variable "d" is unused (if the variable is not meant to be used, prefix it with an underscore)
    │
 46 │                %{items: call_center, on: fn cs, i, d, cc -> cs.call == cc.cc_call_center_sk end}
    │                                                    ~
    │
    └─ /tmp/q57.exs:46:52: Main.main/0

    warning: variable "i" is unused (if the variable is not meant to be used, prefix it with an underscore)
    │
 46 │                %{items: call_center, on: fn cs, i, d, cc -> cs.call == cc.cc_call_center_sk end}
    │                                                 ~
    │
    └─ /tmp/q57.exs:46:49: Main.main/0

    warning: variable "cs" is unused (if the variable is not meant to be used, prefix it with an underscore)
    │
 61 │            _group_by(rows, fn %{cs: cs, i: i, d: d, cc: cc} ->
    │                                     ~
    │
    └─ /tmp/q57.exs:61:37: Main.main/0

    error: imported Kernel.abs/1 conflicts with local function
    │
  4 │   def abs(x) do
    │       ^
    │
    └─ /tmp/q57.exs:4:7: Main (module)

** (CompileError) /tmp/q57.exs: cannot compile module Main (errors have been logged)
